@@ -1,3 +1,9 @@
+2018-07-31  Tom Tromey  <tom@tromey.com>
+
+	* configure.ac: Use AM_GDB_CXX_DEBUG.
+	* config.in, configure: Rebuild.
+	* acinclude.m4: Include ../cxx-debug.m4.
+
 2018-07-22  Simon Marchi  <simon.marchi@polymtl.ca>
 
 	* linux-mips-low.c (mips_collect_ptrace_register): Remove unused
