@@ -1,3 +1,10 @@
+2018-07-31  Tom Tromey  <tom@tromey.com>
+
+	* cxx-debug.m4: New file.
+	* configure.ac: Use AM_GDB_CXX_DEBUG.
+	* config.in, configure: Rebuild.
+	* acinclude.m4: Include cxx-debug.m4.
+
 2018-07-30  Tom Tromey  <tom@tromey.com>
 
 	* nat/linux-osdata.c (pid_pgid_entry::operator<): Fix
